force-app/main/default/objects/Shoes__c/Shoes__c.object-meta.xml
<CustomObject>
    <label>Shoe</label>
    <nameField>
        <label>Shoe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shoes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>