force-app/main/default/objects/Shoes__c/fields/img__c.field-meta.xml
<CustomField>
    <fullName>img__c</fullName>
    <description>Where the image is for this shoe.</description>
    <label>img</label>
    <length>50</length>
    <type>Text</type>
</CustomField>