force-app/main/default/objects/Shoes__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>